Summary of important user-visible changes for odepkg 0.8.3:
-------------------------------------------------------------------

 ** Makefile fixed to work with non-standard linker options e.g on
    Apple.